crates/parser/tests/snapshots/parser_test__pub_import_multiple.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - Import:
      is_pub: true
      path: core/option
      names:
        - name: Option
          alias: ~
        - name: Some
          alias: ~
        - name: None
          alias: ~
      span:
        - 0
        - 43
  - Import:
      is_pub: true
      path: core/result
      names:
        - name: Result
          alias: ~
      span:
        - 44
        - 75
