crates/parser/tests/snapshots/parser_test__pub_open_type.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefType:
      name: Color
      visibility: PubOpen
      type_params: []
      kind:
        Sum:
          variants:
            - name: Red
              fields: []
              span:
                - 22
                - 25
            - name: Green
              fields: []
              span:
                - 28
                - 33
            - name: Blue
              fields: []
              span:
                - 36
                - 40
      deriving: []
      span:
        - 0
        - 40
