crates/parser/tests/snapshots/parser_test__pub_use.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - PubUse:
      names:
        - Option
        - Some
        - None
      span:
        - 0
        - 26
