crates/parser/tests/snapshots/parser_test__pub_use_multiple_decls.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - PubUse:
      names:
        - Option
        - Some
        - None
      span:
        - 0
        - 26
  - PubUse:
      names:
        - Result
      span:
        - 27
        - 41
