crates/parser/tests/snapshots/parser_test__recur.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      type_params: []
      params:
        - name: n
          ty:
            Named:
              name: Int
              span:
                - 9
                - 12
          span:
            - 6
            - 12
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 17
            - 20
      body:
        If:
          cond:
            BinaryOp:
              op: Le
              lhs:
                Var:
                  name: n
                  span:
                    - 26
                    - 27
              rhs:
                Lit:
                  value:
                    Int: 1
                  span:
                    - 31
                    - 32
              span:
                - 26
                - 32
          then_:
            Lit:
              value:
                Int: 1
              span:
                - 35
                - 36
          else_:
            BinaryOp:
              op: Mul
              lhs:
                Var:
                  name: n
                  span:
                    - 46
                    - 47
              rhs:
                Recur:
                  args:
                    - BinaryOp:
                        op: Sub
                        lhs:
                          Var:
                            name: n
                            span:
                              - 56
                              - 57
                        rhs:
                          Lit:
                            value:
                              Int: 1
                            span:
                              - 60
                              - 61
                        span:
                          - 56
                          - 61
                  span:
                    - 50
                    - 62
              span:
                - 46
                - 62
          span:
            - 23
            - 64
      span:
        - 0
        - 64
