crates/parser/tests/snapshots/parser_test__self.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse(\"self\")"
---
Self_:
  span:
    - 0
    - 4
