crates/parser/tests/snapshots/parser_test__string_literal.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse(\"\\\"hello\\\"\")"
---
Lit:
  value:
    String: hello
  span:
    - 0
    - 7
