crates/parser/tests/snapshots/parser_test__sum_type.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefType:
      name: Option
      visibility: Private
      type_params:
        - a
      kind:
        Sum:
          variants:
            - name: Some
              fields:
                - Var:
                    name: a
                    span:
                      - 22
                      - 23
              span:
                - 17
                - 24
            - name: None
              fields: []
              span:
                - 27
                - 31
      deriving: []
      span:
        - 0
        - 31
